--- a/layout.html
+++ b/layout.html
@@ -7,9 +7,42 @@
     <title>layout</title>
 
     <link rel="stylesheet" href="./styles.css">
+
+    <!-- font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
+
+    <!-- Fontawesome icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <!-- header section start -->
+    <header>
+        <nav>
+            <li>
+                <p>Have any question ?</p>
+            </li>
+            <li>
+                <span>
+                    <i class="fa fa-phone"></i>
+                    <a href="">+1(21) 234 4567</a>
+                </span>
+            </li>
+            <li>
+                <span>
+                    <i class="fa fa-envelope"></i>
+                    <a href>info@example.com</a>
+                </span>
+            </li>
+            <li class="icons-div">
+                    <a href=""><i class="fa-brands fa-facebook"></i></a>
+                    <a href=""><i class="fa-brands fa-twitter"></i></a>
+                    <a href=""><i class="fa-brands fa-instagram"></i></a>
+                    <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
+            </li>
+        </nav>
+    </header>
     <!-- header section end -->
 
     <!-- main section start -->
