--- a/layout.html
+++ b/layout.html
@@ -42,6 +42,24 @@
                     <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
             </li>
         </nav>
+        <nav>
+            <h1>Musical</h1>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About Us</a></li>
+                <li><a href="">Classes</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">Pages</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+            <div class="search-bar">
+                <input type="search">
+                <button><i class="fa fa-search"></i></i></button>
+            </div>
+            <div class="mode-icon">
+                <i class="fa fa-sun"></i>
+            </div>
+        </nav>
     </header>
     <!-- header section end -->
 
