--- a/layout.html
+++ b/layout.html
@@ -18,7 +18,6 @@
 </head>
 <body>
     <!-- header section start -->
-    <header>
         <nav>
             <li>
                 <p>Have any question ?</p>
@@ -42,7 +41,8 @@
                     <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
             </li>
         </nav>
-        <nav>
+
+        <nav class="sticky-nav">
             <h1>Musical</h1>
             <ul>
                 <li><a href="">Home</a></li>
@@ -56,14 +56,18 @@
                 <input type="search">
                 <button><i class="fa fa-search"></i></i></button>
             </div>
-            <div class="mode-icon">
+            <span class="mode-icon">
                 <i class="fa fa-sun"></i>
-            </div>
+            </span>
+            <span class="menu-icon">
+                <i class="fa fa-list"></i>
+            </span>
         </nav>
-    </header>
+    
     <!-- header section end -->
 
     <!-- main section start -->
+    <div class="test" style="height: 2000px;"></div>
     <!-- main section end -->
 
     <!-- footer section start -->
