--- a/layout.html
+++ b/layout.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!-- This is a temporary file layout. We will use this layout for every pages. This page will be deleted after completion of the project. -->
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,56 +15,74 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
 
     <!-- Fontawesome icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
     <!-- header section start -->
-        <nav>
-            <li>
-                <p>Have any question ?</p>
-            </li>
-            <li>
-                <span>
-                    <i class="fa fa-phone"></i>
-                    <a href="">+1(21) 234 4567</a>
-                </span>
-            </li>
-            <li>
-                <span>
-                    <i class="fa fa-envelope"></i>
-                    <a href>info@example.com</a>
-                </span>
-            </li>
-            <li class="icons-div">
-                    <a href=""><i class="fa-brands fa-facebook"></i></a>
-                    <a href=""><i class="fa-brands fa-twitter"></i></a>
-                    <a href=""><i class="fa-brands fa-instagram"></i></a>
-                    <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
-            </li>
-        </nav>
+    <nav>
+        <li>
+            <p>Have any question ?</p>
+        </li>
+        <li>
+            <span>
+                <i class="fa fa-phone"></i>
+                <a href="">+1(21) 234 4567</a>
+            </span>
+        </li>
+        <li>
+            <span>
+                <i class="fa fa-envelope"></i>
+                <a href>info@example.com</a>
+            </span>
+        </li>
+        <li class="icons-div">
+            <a href=""><i class="fa-brands fa-facebook"></i></a>
+            <a href=""><i class="fa-brands fa-twitter"></i></a>
+            <a href=""><i class="fa-brands fa-instagram"></i></a>
+            <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
+        </li>
+    </nav>
 
-        <nav class="sticky-nav">
-            <h1>Musical</h1>
-            <ul>
+    <nav class="sticky-nav">
+        <h1>Musical</h1>
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">About Us</a></li>
+            <li><a href="">Classes</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Pages</a></li>
+            <li><a href="">Contact</a></li>
+        </ul>
+        <div class="search-bar">
+            <input type="search">
+            <button><i class="fa fa-search"></i></i></button>
+        </div>
+        <span class="mode-icon">
+            <i class="fa fa-sun"></i>
+        </span>
+        <span class="menu-icon">
+            <i class="fa fa-list"></i>
+            <ul class="hidden-menu">
+                <li></li>
                 <li><a href="">Home</a></li>
                 <li><a href="">About Us</a></li>
                 <li><a href="">Classes</a></li>
                 <li><a href="">Blog</a></li>
                 <li><a href="">Pages</a></li>
                 <li><a href="">Contact</a></li>
+                <li>
+                    <div class="search-bar">
+                        <input type="search">
+                        <button><i class="fa fa-search"></i></button>
+                    </div>
+                    </li>
             </ul>
-            <div class="search-bar">
-                <input type="search">
-                <button><i class="fa fa-search"></i></i></button>
-            </div>
-            <span class="mode-icon">
-                <i class="fa fa-sun"></i>
-            </span>
-            <span class="menu-icon">
-                <i class="fa fa-list"></i>
-            </span>
-        </nav>
-    
+        </span>
+    </nav>
+
     <!-- header section end -->
 
     <!-- main section start -->
@@ -71,7 +90,11 @@
     <!-- main section end -->
 
     <!-- footer section start -->
+    <footer>
+        Copyright &copy; The Kreativs 2023
+    </footer>
     <!-- footer section end -->
-    
+
 </body>
+
 </html>
