--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
         <a href="/"><h1>Musical</h1></a>
         <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="./about.html">About Us</a></li>
+            <li><a href="./about.html" class="active">About Us</a></li>
             <li><a href="./classes.html">Classes</a></li>
             <li><a href="./blogs.html">Blog</a></li>
             <!-- <li><a href="./pages.html">Pages</a></li> -->
@@ -68,7 +68,7 @@
             <ul class="hidden-menu">
                 <li></li>
                 <li><a href="/">Home</a></li>
-                <li><a href="./about.html">About Us</a></li>
+                <li><a href="./about.html" class="active">About Us</a></li>
                 <li><a href="./classes.html">Classes</a></li>
                 <li><a href="./blogs.html">Blog</a></li>
                 <!-- <li><a href="./pages.html">Pages</a></li> -->
