--- a/blogs.html
+++ b/blogs.html
@@ -52,7 +52,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="./about.html">About Us</a></li>
             <li><a href="./classes.html">Classes</a></li>
-            <li><a href="./blogs.html">Blog</a></li>
+            <li><a href="./blogs.html" class="active">Blog</a></li>
             <!-- <li><a href="./pages.html">Pages</a></li> -->
             <li><a href="./contact.html">Contact</a></li>
         </ul>
@@ -70,7 +70,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="./about.html">About Us</a></li>
                 <li><a href="./classes.html">Classes</a></li>
-                <li><a href="./blogs.html">Blog</a></li>
+                <li><a href="./blogs.html" class="active">Blog</a></li>
                 <!-- <li><a href="./pages.html">Pages</a></li> -->
                 <li><a href="./contact.html">Contact</a></li>
                 <li>
