--- a/classes.html
+++ b/classes.html
@@ -51,7 +51,7 @@
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="./about.html">About Us</a></li>
-            <li><a href="./classes.html">Classes</a></li>
+            <li><a href="./classes.html" class="active">Classes</a></li>
             <li><a href="./blogs.html">Blog</a></li>
             <!-- <li><a href="./pages.html">Pages</a></li> -->
             <li><a href="./contact.html">Contact</a></li>
@@ -69,7 +69,7 @@
                 <li></li>
                 <li><a href="/">Home</a></li>
                 <li><a href="./about.html">About Us</a></li>
-                <li><a href="./classes.html">Classes</a></li>
+                <li><a href="./classes.html" class="active">Classes</a></li>
                 <li><a href="./blogs.html">Blog</a></li>
                 <!-- <li><a href="./pages.html">Pages</a></li> -->
                 <li><a href="./contact.html">Contact</a></li>
