--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
             <li><a href="./classes.html">Classes</a></li>
             <li><a href="./blogs.html">Blog</a></li>
             <!-- <li><a href="./pages.html">Pages</a></li> -->
-            <li><a href="./contact.html">Contact</a></li>
+            <li><a href="./contact.html" class="active">Contact</a></li>
         </ul>
         <div class="search-bar">
             <input type="search">
@@ -72,7 +72,7 @@
                 <li><a href="./classes.html">Classes</a></li>
                 <li><a href="./blogs.html">Blog</a></li>
                 <!-- <li><a href="./pages.html">Pages</a></li> -->
-                <li><a href="./contact.html">Contact</a></li>
+                <li><a href="./contact.html" class="active">Contact</a></li>
                 <li>
                     <div class="search-bar">
                         <input type="search">
