--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <nav class="sticky-nav">
         <a href="/"><h1>Musical</h1></a>
         <ul>
-            <li><a href="/">Home</a></li>
+            <li><a href="/" class="active">Home</a></li>
             <li><a href="./about.html">About Us</a></li>
             <li><a href="./classes.html">Classes</a></li>
             <li><a href="./blogs.html">Blog</a></li>
@@ -67,7 +67,7 @@
             <i class="fa fa-list"></i>
             <ul class="hidden-menu">
                 <li></li>
-                <li><a href="/">Home</a></li>
+                <li><a href="/" class="active">Home</a></li>
                 <li><a href="./about.html">About Us</a></li>
                 <li><a href="./classes.html">Classes</a></li>
                 <li><a href="./blogs.html">Blog</a></li>
