fixed a small space of background color

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body>
+<body style="background-color: #18201D;">
     <!-- header section start -->
     <nav>
         <li>
