--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,15 @@
 
     <!-- main section start -->
     <div class="test" style="height: auto;"></div>
-    <!-- main section end -->
+
+    <div class="contact-hero">
+        <img src="./assets/images/blogs/blogs-hero.jpg" alt="">
+        <div class="title">
+            <h1>Contact</h1>
+            <h3>Home > Contact</h3>
+        </div>
+    </div>
+    
     <div class="contact-main-content">
         <h3 class="title-style text-center">
             Contact <span>Us</span> 
@@ -127,11 +135,13 @@
         src="https://shorturl.at/hoFS0"
         width="100%" 
         height="450" 
-        style="border:0;" 
+        class="map-frame" 
         allowfullscreen="" 
         loading="lazy" 
         referrerpolicy="no-referrer-when-downgrade">
     </iframe>
+    <!-- main section end -->
+
     <!-- footer section start -->
     <footer>
         Copyright &copy; The Kreativs 2023
