--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
     <!-- header section end -->
 
     <!-- main section start -->
-    <div style="height: auto;"></div>
+    <div style="height: auto;">
         <div class="contact-hero">
             <img src="./assets/images/blogs/blogs-hero.jpg" alt="">
             <div class="title">
@@ -138,6 +138,7 @@
             loading="lazy" 
             referrerpolicy="no-referrer-when-downgrade">
         </iframe>
+    </div>
     <!-- main section end -->
 
     <!-- footer section start -->
