fixed image source

--- a/index.html
+++ b/index.html
@@ -95,28 +95,28 @@
             <div class="flex-container">
                 <div class="flex-item">
                     <div class="music-image-container">
-                        <img class="music-image-solid" src="/assets/images/music-solid.svg" alt="Music-icon"/>
+                        <img class="music-image-solid" src="./assets/images/music-solid.svg" alt="Music-icon"/>
                     </div>
                     <p>Lorem ipsum dolor sit amet, elit. Id ab commodi magnam fugiat accusamus eos.</p>
                 </div>
 
                 <div class="flex-item">
                     <div class="music-image-container">
-                        <img class="music-image-solid" src="/assets/images/music-solid.svg" alt="Music-icon"/>
+                        <img class="music-image-solid" src="./assets/images/music-solid.svg" alt="Music-icon"/>
                     </div>
                     <p>Lorem ipsum dolor sit amet, elit. Id ab commodi magnam fugiat accusamus eos.</p>
                 </div>
 
                 <div class="flex-item">
                     <div class="music-image-container">
-                        <img class="music-image-solid" src="/assets/images/music-solid.svg" alt="Music-icon"/>
+                        <img class="music-image-solid" src="./assets/images/music-solid.svg" alt="Music-icon"/>
                     </div>
                     <p>Lorem ipsum dolor sit amet, elit. Id ab commodi magnam fugiat accusamus eos.</p>
                 </div>
 
                 <div class="flex-item">
                     <div class="music-image-container">
-                        <img class="music-image-solid" src="/assets/images/music-solid.svg" alt="Music-icon"/>
+                        <img class="music-image-solid" src="./assets/images/music-solid.svg" alt="Music-icon"/>
                     </div>
                     <p>Lorem ipsum dolor sit amet, elit. Id ab commodi magnam fugiat accusamus eos.</p>
                 </div>
