--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 
     <!-- Fontawesome icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -87,42 +87,61 @@
     <!-- header section end -->
 
     <!-- main section start -->
-        <div class="index-main-content">
-            <h3 class="title-style text-center">
-                Our Best Music <span>Classes</span> 
-            </h3>
+    <div class="index-main-content">
+        <h3 class="title-style text-center">
+            Our Best Music <span>Classes</span> 
+        </h3>
 
-                <div class="flex-container">
-                    <div class="flex-item">
-                        <div class="music-image-container">
-                            <img class="music-image-solid" src="/assets/images/music-solid.svg" alt="Music-icon"/>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet, elit. Id ab commodi magnam fugiat accusamus eos.</p>
+            <div class="flex-container">
+                <div class="flex-item">
+                    <div class="music-image-container">
+                        <img class="music-image-solid" src="./assets/images/music-solid.svg" alt="Music-icon"/>
                     </div>
-
-                    <div class="flex-item">
-                        <div class="music-image-container">
-                            <img class="music-image-solid" src="/assets/images/music-solid.svg" alt="Music-icon"/>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet, elit. Id ab commodi magnam fugiat accusamus eos.</p>
-                    </div>
-
-                    <div class="flex-item">
-                        <div class="music-image-container">
-                            <img class="music-image-solid" src="/assets/images/music-solid.svg" alt="Music-icon"/>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet, elit. Id ab commodi magnam fugiat accusamus eos.</p>
-                    </div>
-
-                    <div class="flex-item">
-                        <div class="music-image-container">
-                            <img class="music-image-solid" src="/assets/images/music-solid.svg" alt="Music-icon"/>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet, elit. Id ab commodi magnam fugiat accusamus eos.</p>
-                    </div>
+                    <p>Lorem ipsum dolor sit amet, elit. Id ab commodi magnam fugiat accusamus eos.</p>
                 </div>
 
-        </div>
+                <div class="flex-item">
+                    <div class="music-image-container">
+                        <img class="music-image-solid" src="./assets/images/music-solid.svg" alt="Music-icon"/>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet, elit. Id ab commodi magnam fugiat accusamus eos.</p>
+                </div>
+
+                <div class="flex-item">
+                    <div class="music-image-container">
+                        <img class="music-image-solid" src="./assets/images/music-solid.svg" alt="Music-icon"/>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet, elit. Id ab commodi magnam fugiat accusamus eos.</p>
+                </div>
+
+                <div class="flex-item">
+                    <div class="music-image-container">
+                        <img class="music-image-solid" src="./assets/images/music-solid.svg" alt="Music-icon"/>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet, elit. Id ab commodi magnam fugiat accusamus eos.</p>
+                </div>
+            </div>
+
+            <div class="quote-container">
+                <blockquote class="quote-container-child">
+                    <p class="quote-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, doloremque sapiente, soluta iste autem suscipit, quas modi sunt asperiores facere ipsam magni adipisci blanditiis dignissimos. Modi quasi aliquam debitis in!</p>
+                    <p class="quote-cite">-Loremnis</p>
+                </blockquote>
+            </div>
+
+            <div class="sign-up-container">
+                <div class="sign-up-child-container">
+                    <div class="sign-up-left-container">
+                        <h4 class="sign-up-title">Call to action! It's time!</h3>
+                        <p class="sign-up-text">Sign up for our product by clicking that button right over there!</p>
+                    </div>
+                    <div class="sign-up-right-container">
+                        <button class="sign-up-button">Sign up</button>
+                    </div>
+                </div>
+            </div>
+
+    </div>
     <!-- main section end -->
 
     <!-- footer section start -->
