Fixed homepage routing in all pages

--- a/about.html
+++ b/about.html
@@ -47,9 +47,9 @@
     </nav>
 
     <nav class="sticky-nav">
-        <a href="/"><h1>Musical</h1></a>
+        <a href="./index.html"><h1>Musical</h1></a>
         <ul>
-            <li><a href="/">Home</a></li>
+            <li><a href="./index.html">Home</a></li>
             <li><a href="./about.html" class="active">About Us</a></li>
             <li><a href="./classes.html">Classes</a></li>
             <li><a href="./blogs.html">Blog</a></li>
@@ -67,7 +67,7 @@
             <i class="fa fa-list"></i>
             <ul class="hidden-menu">
                 <li></li>
-                <li><a href="/">Home</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <li><a href="./about.html" class="active">About Us</a></li>
                 <li><a href="./classes.html">Classes</a></li>
                 <li><a href="./blogs.html">Blog</a></li>
