--- a/blogs.html
+++ b/blogs.html
@@ -48,11 +48,11 @@
     </nav>
 
     <nav class="sticky-nav">
-        <a href="/">
+        <a href="./index.html">
             <h1>Musical</h1>
         </a>
         <ul>
-            <li><a href="/">Home</a></li>
+            <li><a href="./index.html">Home</a></li>
             <li><a href="./about.html">About Us</a></li>
             <li><a href="./classes.html">Classes</a></li>
             <li><a href="./blogs.html" class="active">Blog</a></li>
@@ -70,7 +70,7 @@
             <i class="fa fa-list"></i>
             <ul class="hidden-menu">
                 <li></li>
-                <li><a href="/">Home</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <li><a href="./about.html">About Us</a></li>
                 <li><a href="./classes.html">Classes</a></li>
                 <li><a href="./blogs.html" class="active">Blog</a></li>
