--- a/login.html
+++ b/login.html
@@ -50,9 +50,9 @@
     </nav>
 
     <nav class="sticky-nav">
-        <a href="/"><h1>Musical</h1></a>
+        <a href="./index.html"><h1>Musical</h1></a>
         <ul>
-            <li><a href="/" class="active">Home</a></li>
+            <li><a href="./index.html" class="active">Home</a></li>
             <li><a href="./about.html">About Us</a></li>
             <li><a href="./classes.html">Classes</a></li>
             <li><a href="./blogs.html">Blog</a></li>
@@ -70,7 +70,7 @@
             <i class="fa fa-list"></i>
             <ul class="hidden-menu">
                 <li></li>
-                <li><a href="/" class="active">Home</a></li>
+                <li><a href="./index.html" class="active">Home</a></li>
                 <li><a href="./about.html">About Us</a></li>
                 <li><a href="./classes.html">Classes</a></li>
                 <li><a href="./blogs.html">Blog</a></li>
