--- a/index.html
+++ b/index.html
@@ -91,40 +91,39 @@
         <h3 class="title-style text-center">
             Our Best Music <span>Classes</span> 
         </h3>
-
             <div class="flex-container">
                 <div class="flex-item">
                     <div class="music-image-container">
                         <img class="music-image-solid" src="./assets/images/music-solid.svg" alt="Music-icon"/>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, elit. Id ab commodi magnam fugiat accusamus eos.</p>
+                    <p class="flex-content">Lorem ipsum dolor sit amet, elit. Id ab commodi magnam fugiat accusamus eos.</p>
                 </div>
 
                 <div class="flex-item">
                     <div class="music-image-container">
                         <img class="music-image-solid" src="./assets/images/music-solid.svg" alt="Music-icon"/>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, elit. Id ab commodi magnam fugiat accusamus eos.</p>
+                    <p class="flex-content">Lorem ipsum dolor sit amet, elit. Id ab commodi magnam fugiat accusamus eos.</p>
                 </div>
 
                 <div class="flex-item">
                     <div class="music-image-container">
                         <img class="music-image-solid" src="./assets/images/music-solid.svg" alt="Music-icon"/>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, elit. Id ab commodi magnam fugiat accusamus eos.</p>
+                    <p class="flex-content">Lorem ipsum dolor sit amet, elit. Id ab commodi magnam fugiat accusamus eos.</p>
                 </div>
 
                 <div class="flex-item">
                     <div class="music-image-container">
                         <img class="music-image-solid" src="./assets/images/music-solid.svg" alt="Music-icon"/>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, elit. Id ab commodi magnam fugiat accusamus eos.</p>
+                    <p class="flex-content">Lorem ipsum dolor sit amet, elit. Id ab commodi magnam fugiat accusamus eos.</p>
                 </div>
             </div>
 
             <div class="quote-container">
                 <blockquote class="quote-container-child">
-                    <p class="quote-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, doloremque sapiente, soluta iste autem suscipit, quas modi sunt asperiores facere ipsam magni adipisci blanditiis dignissimos. Modi quasi aliquam debitis in!</p>
+                    <p class="quote-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, doloremque sapiente, soluta iste autem suscipit, quas modi sunt asperiores facere ipsam magni adipisci blanditiis dignissimos. Modi quasi aliquam debitis in!</p>
                     <p class="quote-cite">-Loremnis</p>
                 </blockquote>
             </div>
@@ -133,14 +132,13 @@
                 <div class="sign-up-child-container">
                     <div class="sign-up-left-container">
                         <h4 class="sign-up-title">Call to action! It's time!</h3>
-                        <p class="sign-up-text">Sign up for our product by clicking that button right over there!</p>
+                        <p class="sign-up-content">Sign up for our product by clicking that button right over there!</p>
                     </div>
                     <div class="sign-up-right-container">
                         <button class="sign-up-button">Sign up</button>
                     </div>
                 </div>
             </div>
-
     </div>
     <!-- main section end -->
 
