--- a/login.html
+++ b/login.html
@@ -52,9 +52,8 @@
     <nav class="sticky-nav">
         <a href="./index.html"><h1>Musical</h1></a>
         <ul>
-            <li><a href="./index.html" class="active">Home</a></li>
+            <li><a href="./index.html">Home</a></li>
             <li><a href="./about.html">About Us</a></li>
-            <li><a href="./classes.html">Classes</a></li>
             <li><a href="./blogs.html">Blog</a></li>
             <!-- <li><a href="./pages.html">Pages</a></li> -->
             <li><a href="./contact.html">Contact</a></li>
@@ -64,7 +63,8 @@
             <button><i class="fa fa-search"></i></i></button>
         </div>
         <span class="mode-icon">
-            <i class="fa fa-sun"></i>
+            <a href="./login.html" style="margin-right: 10px;" class="active">Sign in</a>
+            <a href="./signup.html">Sign up</a>
         </span>
         <span class="menu-icon">
             <i class="fa fa-list"></i>
@@ -72,7 +72,6 @@
                 <li></li>
                 <li><a href="./index.html" class="active">Home</a></li>
                 <li><a href="./about.html">About Us</a></li>
-                <li><a href="./classes.html">Classes</a></li>
                 <li><a href="./blogs.html">Blog</a></li>
                 <!-- <li><a href="./pages.html">Pages</a></li> -->
                 <li><a href="./contact.html">Contact</a></li>
