--- a/contact.html
+++ b/contact.html
@@ -31,13 +31,13 @@
         <li>
             <span>
                 <i class="fa fa-phone"></i>
-                <a href="">+1(21) 234 4567</a>
+                <a href="tel:+1(21) 234 4567">+1(21) 234 4567</a>
             </span>
         </li>
         <li>
             <span>
                 <i class="fa fa-envelope"></i>
-                <a href>info@example.com</a>
+                <a href="mailto:info@support.com">info@example.com</a>
             </span>
         </li>
         <li class="icons-div">
