--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>layout</title>
+    <title>Musical about us</title>
 
     <link rel="stylesheet" href="./styles.css">
 
