--- a/signup.html
+++ b/signup.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./loginandsignup.css">
 
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
