changed login and register page links to icons on header

--- a/login.html
+++ b/login.html
@@ -64,8 +64,8 @@
             <button><i class="fa fa-search"></i></i></button>
         </div>
         <span class="mode-icon">
-            <a href="./login.html" style="margin-right: 10px;" class="active">Sign in</a>
-            <a href="./signup.html">Sign up</a>
+            <a href="./login.html" style="margin-right: 10px;" class="fa-solid fa-user active"></a>
+            <a href="./signup.html" class="fa-solid fa-user-plus"></a>
         </span>
         <span class="menu-icon">
             <i class="fa fa-list"></i>
