--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
 
     <!-- Fontawesome icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -88,7 +88,7 @@
 
     <!-- main section start -->
     <div class="index-main-content">
-        <h3 class="title-style text-center">
+        <h3 class="title-style">
             Our Best Music <span>Classes</span> 
         </h3>
             <div class="flex-container">
@@ -129,13 +129,15 @@
             </div>
 
             <div class="sign-up-container">
-                <div class="sign-up-child-container">
-                    <div class="sign-up-left-container">
-                        <h4 class="sign-up-title">Call to action! It's time!</h3>
-                        <p class="sign-up-content">Sign up for our product by clicking that button right over there!</p>
-                    </div>
-                    <div class="sign-up-right-container">
-                        <button class="sign-up-button">Sign up</button>
+                <div class="sign-up-child-container center-75">
+                    <div class="sign-up-flex-container center-75">    
+                        <div class="sign-up-left-container">
+                            <h4 class="sign-up-title">Call to action! It's time!</h3>
+                            <p class="sign-up-content">Sign up for our product by clicking that button right over there!</p>
+                        </div>
+                        <div class="sign-up-right-container">
+                            <a href="./signup.html"><button class="sign-up-button">Sign up</button></a>
+                        </div>
                     </div>
                 </div>
             </div>
