new about us page

--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
     <title>layout</title>
 
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./about.css">
 
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -86,12 +87,55 @@
     <!-- header section end -->
 
     <!-- main section start -->
-    <div class="test" style="height: 2000px;"></div>
+
+    <div class="contact-hero">
+        <img src="./assets/images/blogs/blogs-hero.jpg" alt="">
+        <div class="title">
+            <h1>About us</h1>
+            <h3>Home > About us</h3>
+        </div>
+    </div>
+    <section>
+        <div class="container-about" style="height: 2000px;">
+            <div class="items">
+                <div class="welcome">
+                    <h3>Welcome to Musical</h3>
+                    <p>Welcome to Musical, where the harmonious world of music 
+                        unfolds before your very ears. We are a passionate 
+                        community of musicians, educators, and enthusiasts dedicated to 
+                        nurturing the musical talent within you. Our mission is 
+                        simple yet profound: to inspire, educate, and empower individuals on 
+                        their musical journey.
+                     </p><br>
+                     <button class="know-more">Know more about us</button>
+                </div>
+
+                <div class="image-container">
+                    <div class="image-music">
+                        <img src="./assets/images/photo-1598387846419-a2c870ad3ecd.avif" alt="musicians">
+                    </div>
+                </div>
+            </div>
+            <div class="sign-up-container">
+                <div class="sign-up-child-container center-75">
+                    <div class="sign-up-flex-container center-75">    
+                        <div class="sign-up-left-container">
+                            <h4 class="sign-up-title">Call to action! It's time!</h3>
+                            <p class="sign-up-content">Sign up for our product by clicking that button right over there!</p>
+                        </div>
+                        <div class="sign-up-right-container">
+                            <a href="./signup.html"><button class="sign-up-button">Sign up</button></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- main section end -->
 
     <!-- footer section start -->
     <footer>
-        Copyright &copy; The Kreativs 2023
+       <p>Copyright &copy; The Kreativs 2023</p>
     </footer>
     <!-- footer section end -->
 
