--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
         </div>
     </div>
     <section>
-        <div class="container-about" style="height: 2000px;">
+        <div class="container-about" style="height: auto;">
             <div class="items">
                 <div class="welcome">
                     <h3>Welcome to Musical</h3>
