--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
     <title>Musical about us</title>
 
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./about.css">
 
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
