--- a/about.html
+++ b/about.html
@@ -30,13 +30,13 @@
         <li>
             <span>
                 <i class="fa fa-phone"></i>
-                <a href="">+1(21) 234 4567</a>
+                <a href="tel:+1(21) 234 4567">+1(21) 234 4567</a>
             </span>
         </li>
         <li>
             <span>
                 <i class="fa fa-envelope"></i>
-                <a href>info@example.com</a>
+                <a href="mailto:info@support.com">info@example.com</a>
             </span>
         </li>
         <li class="icons-div">
@@ -62,7 +62,8 @@
             <button><i class="fa fa-search"></i></i></button>
         </div>
         <span class="mode-icon">
-            <i class="fa fa-sun"></i>
+            <a href="./login.html" style="margin-right: 10px;" class="fa-solid fa-user"></a>
+            <a href="./signup.html" class="fa-solid fa-user-plus"></a>
         </span>
         <span class="menu-icon">
             <i class="fa fa-list"></i>
