--- a/about.html
+++ b/about.html
@@ -52,7 +52,6 @@
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="./about.html" class="active">About Us</a></li>
-            <li><a href="./classes.html">Classes</a></li>
             <li><a href="./blogs.html">Blog</a></li>
             <!-- <li><a href="./pages.html">Pages</a></li> -->
             <li><a href="./contact.html">Contact</a></li>
@@ -71,7 +70,6 @@
                 <li></li>
                 <li><a href="/">Home</a></li>
                 <li><a href="./about.html" class="active">About Us</a></li>
-                <li><a href="./classes.html">Classes</a></li>
                 <li><a href="./blogs.html">Blog</a></li>
                 <!-- <li><a href="./pages.html">Pages</a></li> -->
                 <li><a href="./contact.html">Contact</a></li>
@@ -96,12 +94,12 @@
             <h3>Home > About us</h3>
         </div>
     </div>
-    <section>
-        <div class="container-about">
+    <section class="container-about">
+        <div>
             <div class="items">
                 <div class="welcome">
-                    <h3>Welcome to Musical</h3>
-                    <p>Welcome to Musical, where the harmonious world of music 
+                    <h3 class="text">Welcome to Musical</h3>
+                    <p class="text">Welcome to Musical, where the harmonious world of music 
                         unfolds before your very ears. We are a passionate 
                         community of musicians, educators, and enthusiasts dedicated to 
                         nurturing the musical talent within you. Our mission is 
@@ -110,11 +108,8 @@
                      </p><br>
                      <button class="know-more">Know more about us</button>
                 </div>
-
                 <div class="image-container">
-                    <div class="image-music">
-                        <img src="./assets/images/photo-1598387846419-a2c870ad3ecd.avif" alt="musicians">
-                    </div>
+                    <img src="./assets/images/about-us-image.png" alt="musicians">
                 </div>
             </div>
             <div class="sign-up-container">
