changing icons to use svg icons

--- a/login.html
+++ b/login.html
@@ -25,7 +25,6 @@
 
 <body>
     <!-- Background -->
-    <div class="background-image"><img src="./assets/images/signin-image-1.jpg" alt="rythm"></div>
     <!-- header section start -->
     <nav>
         <li>
@@ -33,46 +32,48 @@
         </li>
         <li>
             <span>
-                <i class="fa fa-phone"></i>
+                <img src="./assets/icons/telephone.svg" alt="" class="icons"> 
                 <a href="tel:+1(21) 234 4567">+1(21) 234 4567</a>
             </span>
         </li>
         <li>
             <span>
-                <i class="fa fa-envelope"></i>
+                <img src="./assets/icons/envelope.svg" alt="" class="icons">
                 <a href="mailto:info@support.com">info@example.com</a>
             </span>
         </li>
         <li class="icons-div">
-            <a href="#"><i class="fa-brands fa-facebook"></i></a>
-            <a href="#"><i class="fa-brands fa-twitter"></i></a>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href="#"><img src="./assets/icons/facebook.svg" alt="" class="icons"></a>
+            <a href="#"><img src="./assets/icons/twitter.svg" alt="" class="icons"></a>
+            <a href="#"><img src="./assets/icons/instagram.svg" alt="" class="icons"></a>
+            <a href="#"><img src="./assets/icons/linkedin.svg" alt="" class="icons"></a>
+
         </li>
     </nav>
 
     <nav class="sticky-nav">
-        <a href="./index.html"><h1>Musical</h1></a>
+        <a href="./index.html">
+            <h1>Musical</h1>
+        </a>
         <ul>
             <li><a href="./index.html">Home</a></li>
             <li><a href="./about.html">About Us</a></li>
             <li><a href="./blogs.html">Blog</a></li>
-            <!-- <li><a href="./pages.html">Pages</a></li> -->
             <li><a href="./contact.html">Contact</a></li>
         </ul>
         <div class="search-bar">
             <input type="search">
-            <button><i class="fa fa-search"></i></i></button>
+            <button><img src="./assets/icons/search.svg" alt="" class="icons"></button>
         </div>
-        <span class="mode-icon">
-            <a href="./login.html" style="margin-right: 10px;" class="fa-solid fa-user active"></a>
-            <a href="./signup.html" class="fa-solid fa-user-plus"></a>
+        <span class="login-register-icon">
+            <a href="./login.html" style="margin-right: 10px;" ><img src="./assets/icons/signin.svg" alt="login" class="icons"></a>
+            <a href="./signup.html"><img src="./assets/icons/register.svg" alt="register" class="icons"></a>
         </span>
         <span class="menu-icon">
             <i class="fa fa-list"></i>
             <ul class="hidden-menu">
                 <li></li>
-                <li><a href="./index.html" class="active">Home</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <li><a href="./about.html">About Us</a></li>
                 <li><a href="./blogs.html">Blog</a></li>
                 <!-- <li><a href="./pages.html">Pages</a></li> -->
@@ -82,37 +83,41 @@
                         <input type="search">
                         <button><i class="fa fa-search"></i></button>
                     </div>
-                    </li>
+                </li>
             </ul>
         </span>
     </nav>
-
     <!-- header section end -->
 
     <!-- main section start -->
+    <div class="main-content">
 
-    <div class="container">
-        <h2>Login</h2>
-        <form action="#" method="post">
-            <div class="input-group">
-                <label for="username">Username</label>
-                <input type="text" id="username" name="username" required>
-            </div>
-            <div class="input-group">
-                <label for="password">Password</label>
-                <input type="password" id="password" name="password" required>
-            </div>
-            <button type="submit" class="btn">Login</button>
-        </form>
+    <div class="background-image"><img src="./assets/images/signin-image-1.jpg" alt="rythm">
+
+    </div>
+        <div class="container">
+            <h2>Login</h2>
+            <form action="#" method="post">
+                <div class="input-group">
+                    <label for="username">Username</label>
+                    <input type="text" id="username" name="username" required>
+                </div>
+                <div class="input-group">
+                    <label for="password">Password</label>
+                    <input type="password" id="password" name="password" required>
+                </div>
+                <button type="submit" class="btn">Login</button>
+            </form>
+        </div>
     </div>
 
-    <!-- main section end -->
+        <!-- main section end -->
 
-    <!-- footer section start -->
-    <footer>
-        Copyright &copy; The Kreativs 2023
-    </footer>
-    <!-- footer section end -->
+        <!-- footer section start -->
+        <footer>
+            Copyright &copy; The Kreativs 2023
+        </footer>
+        <!-- footer section end -->
 
 </body>
 
