--- a/about.html
+++ b/about.html
@@ -31,40 +31,42 @@
         </li>
         <li>
             <span>
-                <i class="fa fa-phone"></i>
+                <img src="./assets/icons/telephone.svg" alt="" class="icons"> 
                 <a href="tel:+1(21) 234 4567">+1(21) 234 4567</a>
             </span>
         </li>
         <li>
             <span>
-                <i class="fa fa-envelope"></i>
+                <img src="./assets/icons/envelope.svg" alt="" class="icons">
                 <a href="mailto:info@support.com">info@example.com</a>
             </span>
         </li>
         <li class="icons-div">
-            <a href="#"><i class="fa-brands fa-facebook"></i></a>
-            <a href="#"><i class="fa-brands fa-twitter"></i></a>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href="#"><img src="./assets/icons/facebook.svg" alt="" class="icons"></a>
+            <a href="#"><img src="./assets/icons/twitter.svg" alt="" class="icons"></a>
+            <a href="#"><img src="./assets/icons/instagram.svg" alt="" class="icons"></a>
+            <a href="#"><img src="./assets/icons/linkedin.svg" alt="" class="icons"></a>
+
         </li>
     </nav>
 
     <nav class="sticky-nav">
-        <a href="./index.html"><h1>Musical</h1></a>
+        <a href="./index.html">
+            <h1>Musical</h1>
+        </a>
         <ul>
             <li><a href="./index.html">Home</a></li>
-            <li><a href="./about.html" class="active">About Us</a></li>
+            <li><a href="./about.html">About Us</a></li>
             <li><a href="./blogs.html">Blog</a></li>
-            <!-- <li><a href="./pages.html">Pages</a></li> -->
             <li><a href="./contact.html">Contact</a></li>
         </ul>
         <div class="search-bar">
             <input type="search">
-            <button><i class="fa fa-search"></i></i></button>
+            <button><img src="./assets/icons/search.svg" alt="" class="icons"></button>
         </div>
-        <span class="mode-icon">
-            <a href="./login.html" style="margin-right: 10px;" class="fa-solid fa-user"></a>
-            <a href="./signup.html" class="fa-solid fa-user-plus"></a>
+        <span class="login-register-icon">
+            <a href="./login.html" style="margin-right: 10px;" ><img src="./assets/icons/signin.svg" alt="login" class="icons"></a>
+            <a href="./signup.html"><img src="./assets/icons/register.svg" alt="register" class="icons"></a>
         </span>
         <span class="menu-icon">
             <i class="fa fa-list"></i>
@@ -74,13 +76,13 @@
                 <li><a href="./about.html">About Us</a></li>
                 <li><a href="./blogs.html">Blog</a></li>
                 <!-- <li><a href="./pages.html">Pages</a></li> -->
-                <li><a href="./contact.html" class="active">Contact</a></li>
+                <li><a href="./contact.html">Contact</a></li>
                 <li>
                     <div class="search-bar">
                         <input type="search">
                         <button><i class="fa fa-search"></i></button>
                     </div>
-                    </li>
+                </li>
             </ul>
         </span>
     </nav>
@@ -97,27 +99,27 @@
     </div>
 
     <div class="contact-main-content">
-            <div class="contact-main">
-                <div>
-                    <h3 class="text">Welcome to Musical</h3>
-                    <p class="text">Welcome to Musical, where the harmonious world of music 
-                        unfolds before your very ears. We are a passionate 
-                        community of musicians, educators, and enthusiasts dedicated to 
-                        nurturing the musical talent within you. Our mission is 
-                        simple yet profound: to inspire, educate, and empower individuals on 
-                        their musical journey.
-                     </p><br>
-                     <button class="know-more">Know more about us</button>
-                </div>
+        <div class="contact-main">
+            <div>
+                <h3 class="text">Welcome to Musical</h3>
+                <p class="text">Welcome to Musical, where the harmonious world of music
+                    unfolds before your very ears. We are a passionate
+                    community of musicians, educators, and enthusiasts dedicated to
+                    nurturing the musical talent within you. Our mission is
+                    simple yet profound: to inspire, educate, and empower individuals on
+                    their musical journey.
+                </p><br>
+                <button class="know-more">Know more about us</button>
             </div>
-                <img src="./assets/images/about-us-image.png" alt="musicians" class="musician-image">
+        </div>
+        <img src="./assets/images/about-us-image.png" alt="musicians" class="musician-image">
     </div>
     <div class="sign-up-container">
         <div class="sign-up-child-container center-75">
-            <div class="sign-up-flex-container center-75">    
+            <div class="sign-up-flex-container center-75">
                 <div class="sign-up-left-container">
                     <h4 class="sign-up-title">Call to action! It's time!</h3>
-                    <p class="sign-up-content">Sign up for our product by clicking that button right over there!</p>
+                        <p class="sign-up-content">Sign up for our product by clicking that button right over there!</p>
                 </div>
                 <div class="sign-up-right-container">
                     <a href="./signup.html"><button class="sign-up-button">Sign up</button></a>
