fixed fonts and size according to client requirement

--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
 
             <div class="quote-container">
                 <blockquote class="quote-container-child">
-                    <p class="quote-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, doloremque sapiente, soluta iste autem suscipit, quas modi sunt asperiores facere ipsam magni adipisci blanditiis dignissimos. Modi quasi aliquam debitis in!</p>
-                    <p class="quote-cite">-Loremnis</p>
+                    <p class="quote-content">When I wrote this code, only God and I understood what I did. Now only God knows..</p>
+                    <p class="quote-cite">-Martin Fowler</p>
                 </blockquote>
             </div>
 
