modified:   login.html

--- a/login.html
+++ b/login.html
@@ -111,6 +111,10 @@
     <!-- footer section start -->
     <footer>
         Copyright &copy; The Kreativs 2023
+        
+        <p><a
+            href="https://www.freepik.com/free-vector/beautiful-musical-notes-wave-background-design_1443913.htm#query=music&position=14&from_view=search&track=sph">Image
+            by starline</a> on Freepik</p>
     </footer>
     <!-- footer section end -->
 
