active links color

--- a/signup.html
+++ b/signup.html
@@ -62,7 +62,7 @@
         <span class="login-register-icon">
             <a href="./login.html" style="margin-right: 10px;"><img src="./assets/icons/signin.svg" alt="login"
                     class="icons"></a>
-            <a href="./signup.html"><img src="./assets/icons/register.svg" alt="register" class="icons"></a>
+            <a href="./signup.html"><img src="./assets/icons/register.svg" alt="register" class="icons active"></a>
         </span>
         <span class="menu-icon">
             <img src="./assets/icons/menu.svg" alt="menu" class="icons">
