--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
         </a>
         <ul>
             <li><a href="./index.html">Home</a></li>
-            <li><a href="./about.html">About Us</a></li>
+            <li><a href="./about.html" class="active">About Us</a></li>
             <li><a href="./blogs.html">Blog</a></li>
             <li><a href="./contact.html">Contact</a></li>
         </ul>
