--- a/blogs.html
+++ b/blogs.html
@@ -51,7 +51,7 @@
         <ul>
             <li><a href="./index.html">Home</a></li>
             <li><a href="./about.html">About Us</a></li>
-            <li><a href="./blogs.html">Blog</a></li>
+            <li><a href="./blogs.html" class="active">Blog</a></li>
             <li><a href="./contact.html">Contact</a></li>
         </ul>
         <div class="search-bar">
