--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <h1>Musical</h1>
         </a>
         <ul>
-            <li><a href="./index.html">Home</a></li>
+            <li><a href="./index.html" class="active">Home</a></li>
             <li><a href="./about.html">About Us</a></li>
             <li><a href="./blogs.html">Blog</a></li>
             <li><a href="./contact.html">Contact</a></li>
